--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "ejs-assignment",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.16.1"
+  },
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
